@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-10T01:10:22Z",
+  "timestamp" : "2022-07-10T08:13:37Z",
   "count_outdated" : 382,
   "uniques_outdated" : 207,
-  "count" : 410,
-  "uniques" : 222,
+  "count" : 411,
+  "uniques" : 223,
   "clones" : [
     {
       "timestamp": "2022-06-26T00:00:00Z",
@@ -100,6 +100,13 @@
       "timestamp": "2022-07-09T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
